--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,9 +1,7 @@
 FROM node:23-alpine AS base
 WORKDIR /frontend
-COPY package*.json ./
-RUN npm install
-COPY . .
 EXPOSE 3000
 
 FROM base AS dev
-CMD ["npm", "run", "dev"]
+ENTRYPOINT ["/bin/sh", "-c"]
+CMD ["npm install && npm run dev"]
