--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -3,5 +3,6 @@ WORKDIR /frontend
 EXPOSE 3000
 
 FROM base AS dev
+ENV NODE_NO_WARNINGS 1
 ENTRYPOINT ["/bin/sh", "-c"]
 CMD ["npm install && npm run dev"]
