add auth middleware

--- a/compose.yml
+++ b/compose.yml
@@ -6,6 +6,7 @@ services:
     ports: [3000:3000]
     volumes: [./backend:/backend]
     depends_on: [db]
+    env_file: [./backend/.env]
     environment:
       - ENV=local
       - PORT=3000
