--- a/compose.yml
+++ b/compose.yml
@@ -1,28 +1,35 @@
 services:
-  backend:
-    build:
-      context: ./backend
-      target: dev
+
+  proxy:
+    image: nginx:stable-alpine
     ports: [3000:3000]
-    volumes: [./backend:/backend]
-    depends_on: [db]
-    env_file: [./backend/.env]
-    environment:
-      - ENV=local
-      - PORT=3000
-      - DB_HOST=db
-      - DB_USER=local
-      - DB_PASS=local
-      - DB_NAME=local
+    volumes: [./proxy/nginx.conf:/etc/nginx/nginx.conf:ro]
+    depends_on: [frontend, backend]
 
   frontend:
     build:
       context: ./frontend
       target: dev
     tty: true
-    ports: [4000:4000]
+    ports: [3001:3001]
     volumes: [./frontend:/frontend]
     depends_on: [backend]
+
+  backend:
+    build:
+      context: ./backend
+      target: dev
+    ports: [3002:3002]
+    volumes: [./backend:/backend]
+    env_file: [./backend/.env]
+    environment:
+      - ENV=local
+      - PORT=3002
+      - DB_HOST=db
+      - DB_USER=local
+      - DB_PASS=local
+      - DB_NAME=local
+    depends_on: [db]
 
   db:
     image: postgres:16
